@@ -7,6 +7,9 @@ import com.e_learning.model.Course;
 import com.e_learning.repository.CategoryRepository;
 import com.e_learning.repository.CourseRepository;
 import com.e_learning.repository.CourseVoteRepository;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 
 import java.util.HashMap;
@@ -34,32 +37,15 @@ public class CourseService {
         return courseRepository.save(course);
     }
 
-//    public Course createCourse(Course course) {
-//        // Ensure the category exists and attach the full entity
-//        if (course.getCategory() != null && course.getCategory().getId() != null) {
-//            Category category = categoryRepository.findById(course.getCategory().getId())
-//                    .orElseThrow(() -> new ResourceNotFoundException("Category not found with id: " + course.getCategory().getId()));
-//            course.setCategory(category);
-//        } else {
-//            throw new IllegalArgumentException("Category is required when creating a course.");
-//        }
-//
-//        return courseRepository.save(course);
-//    }
 
     public List<Course> getCoursesByCategoryId(Long categoryId) {
         return courseRepository.findByCategoryId(categoryId);
     }
 
+    public Page<CourseResponseDTO> getAllCoursesWithStats(Pageable pageable) {
+        Page<Course> coursePage = courseRepository.findAll(pageable);
 
-//    public List<Course> getAllCourses() {
-//        return courseRepository.findAll();
-//    }
-
-    public List<CourseResponseDTO> getAllCoursesWithStats() {
-        List<Course> courses = courseRepository.findAll();
-
-        return courses.stream().map(course -> {
+        List<CourseResponseDTO> dtos = coursePage.getContent().stream().map(course -> {
             int topicCount = course.getTopics().size();
             int subtopicCount = course.getTopics().stream()
                     .mapToInt(topic -> topic.getSubtopics().size())
@@ -73,19 +59,60 @@ public class CourseService {
             dto.setCourseId(course.getId());
             dto.setCourseTitle(course.getTitle());
             dto.setCourseDescription(course.getDescription());
-            //dto.setCreatedAt(course.getCreatedAt());
             dto.setImageUrl(course.getImageUrl());
 
             dto.setCourseTopicCount(topicCount);
             dto.setCourseSubtopicCount(subtopicCount);
             dto.setCourseUpvoteCount(upvoteCount);
             dto.setCourseDownvoteCount(downvoteCount);
-            dto.setCourseCommentCount(commentCount);  // ← Newly added line
+            dto.setCourseCommentCount(commentCount);
             dto.setPublished(course.isPublished());
 
+            return dto;
+        }).toList();
+
+        return new PageImpl<>(dtos, pageable, coursePage.getTotalElements());
+    }
+
+
+    public List<CourseResponseDTO> searchCoursesByKeyword(String keyword) {
+        List<Course> courses;
+
+        if (keyword == null || keyword.trim().isEmpty()) {
+            // Fallback: return all courses
+            courses = courseRepository.findAll();
+        } else {
+            // Search by title OR description
+            courses = courseRepository.findByTitleContainingIgnoreCaseOrDescriptionContainingIgnoreCase(keyword, keyword);
+        }
+
+        // Convert to CourseResponseDTO
+        return courses.stream().map(course -> {
+            int topicCount = course.getTopics().size();
+
+            int subtopicCount = course.getTopics().stream()
+                    .mapToInt(topic -> topic.getSubtopics().size())
+                    .sum();
+
+            long upvoteCount = voteRepository.countUpvotesByCourseId(course.getId());
+            long downvoteCount = voteRepository.countDownvotesByCourseId(course.getId());
+            long commentCount = commentService.getCommentCountByCourseId(course.getId());
+
+            CourseResponseDTO dto = new CourseResponseDTO();
+            dto.setCourseId(course.getId());
+            dto.setCourseTitle(course.getTitle());
+            dto.setCourseDescription(course.getDescription());
+            dto.setImageUrl(course.getImageUrl());
+            dto.setPublished(course.isPublished());
+
+            dto.setCourseTopicCount(topicCount);
+            dto.setCourseSubtopicCount(subtopicCount);
+            dto.setCourseUpvoteCount(upvoteCount);
+            dto.setCourseDownvoteCount(downvoteCount);
+            dto.setCourseCommentCount(commentCount);
 
             return dto;
-        }).collect(Collectors.toList());
+        }).toList();
     }
 
 
@@ -105,19 +132,6 @@ public class CourseService {
         return courseRepository.findById(id);
     }
 
-//    public Course updateCourse(Long id, Course updatedCourse) {
-//        Course existing = courseRepository.findById(id)
-//                .orElseThrow(() -> new ResourceNotFoundException("Course not found with id: " + id));
-//
-//        if (updatedCourse.getTitle() != null) {
-//            existing.setTitle(updatedCourse.getTitle());
-//        }
-//        if (updatedCourse.getDescription() != null) {
-//            existing.setDescription(updatedCourse.getDescription());
-//        }
-//
-//        return courseRepository.save(existing);
-//    }
 
     public Course updateCourse(Long id, Course updatedCourse) {
         Course existing = courseRepository.findById(id)
